--- a/app/Resources/views/security/login.html.twig
+++ b/app/Resources/views/security/login.html.twig
@@ -5,6 +5,8 @@
 {% block stylesheets %}
     {{ parent() }}
     <link rel="stylesheet" href="{{ asset('bundles/app/css/login.css') }}">
+    <link rel="stylesheet" href="{{ asset('bundles/app/css/bootstrap-social.css') }}">
+    <link rel="stylesheet" href="{{ asset('bundles/app/css/font-awesome.css') }}">
 {% endblock %}
 
 
@@ -17,6 +19,10 @@
             <div class="row">
                 <div class="col-xs-12">
                     <h1>Connexion!</h1>
+                    <a href="{{ path('connect_to_facebook') }}" class="btn btn-block btn-social btn-facebook">
+                        <span class="fa fa-facebook"></span>Connectez-vous avec Facebook</a>
+                    <a href="#" class="btn btn-block btn-social btn-google">
+                        <i class="fa fa-google"></i>Connectez-vous avec Google</a>
                     {% if error %}
                         <div class="alert alert-danger">
                             <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
@@ -33,13 +39,8 @@
                         </div>
                     {% endfor %}
                     {{ form_start(form) }}
-                    {{ form_row(form.email) }}
-                    {{ form_row(form.plainPassword.first, {
-                        'label' : 'Mot de passe'
-                    }) }}
-                    {{ form_row(form.plainPassword.second, {
-                        'label' : 'Confirmez votre mot de passe'
-                    }) }}
+                    {{ form_row(form._username) }}
+                    {{ form_row(form._password) }}
 
                     <button type="submit" class="btn btn-primary" formnovalidate>Inscription</button>
 
@@ -48,6 +49,7 @@
             </div>
         </div>
         <div class="col">
+            <h1>Vous avez oublié votre mot de passe?</h1>
             <button class="btn btn-warning" data-toggle="modal" data-target="#forgetPassModal">Mot de passe oublié</button>
             <div class="modal" id="forgetPassModal">
                 <div class="modal-dialog">
