--- a/src/AppBundle/Resources/public/css/base.css
+++ b/src/AppBundle/Resources/public/css/base.css
@@ -27,9 +27,63 @@ body
 
 /*----------------
 ------------------
+------Custumization de BOOTSTRAp------
+------------------
+------------------*/
+.btn {
+    padding: 14px 24px;
+    border: 0 none;
+    border-radius: 50px;
+    font-color: white;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+}
+
+.btn-primary
+{
+    background: #6d49d1;
+}
+
+.btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open > .dropdown-toggle.btn-primary {
+    background: #53399e;
+}
+.form-control
+{
+    border: #ded6cd;
+    border-radius: 50px;
+}
+
+/*----------------
+------------------
 ------HEADER------
 ------------------
 ------------------*/
 .navbar-brand{
     font-family: "Raleway";
+}
+
+/*----------------
+------------------
+------FOOTER------
+------------------
+------------------*/
+.footer
+{
+    margin-top: 70px;
+}
+#footerNewsletter
+{
+    background: #c1b7ab;
+}
+
+#footer
+{
+    padding-top: 50px;
+    background: #53399e;
+    height: 250px;
+}
+
+#souscrire
+{
+    text-transform: uppercase;
 }
