Ajout de la table actualite, comment, integration de la page actualites et actualite

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -38,7 +38,7 @@
                         <a class="nav-link" href="#">OISEAUX</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ path('actualite') }}">ACTUALITÉS</a>
+                        <a class="nav-link" href="{{ path('actualites') }}">ACTUALITÉS</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">A PROPOS</a>
