--- a/app/Resources/views/main/actualite.html.twig
+++ b/app/Resources/views/main/actualite.html.twig
@@ -11,10 +11,10 @@
         <p class="text-center">Accueil>>Actualités>>>{{ actualite.title|capitalize }}</p>
     </div>
     <div class="container">
-
+        {#PARTIE ACTUALITE#}
         <div class="media">
-            <img src="{{ asset('bundles/app/img/'~ author.profilePicture) }}" alt="" class="d-flex mr-3 profilePicture">
-            <div class="media-body"><p class="text-center"></p>{{ author.username|capitalize }}</div>
+            <img src="{{ asset('bundles/app/img/'~ user.profilePicture) }}" alt="" class="d-flex mr-3 profilePicture">
+            <div class="media-body"><p class="text-center"></p>{{ user.username|capitalize }}</div>
         </div>
         <p class="text-center">{{ actualite.updateAt|localizeddate('full', 'none')|upper }}</p>
         <div class="media">
@@ -24,7 +24,41 @@
                 <h1>{{ actualite.title|upper }}</h1>
                 <p class="text-justify">{{ actualite.content }}</p>
             </div>
+        </div>
+
+        {#PARTIE COMMENTAIRES#}
+        <div class="comments">
+            {% for comment in comments %}
+                <div class="media">
+                    <img src="{{ asset('bundles/app/img/'~comment.user.profilePicture) }}" alt="" class="d-flex mr-3 imgComment">
+                    <div class="row">
+                        <div class="media-body col-5">
+                            <p><strong>{{ comment.user.username|capitalize }}</strong><br>
+                                <span class="text-muted">{{ comment.updateAt|ago }}</span></p>
+
+                        </div>
+                        <div class="media-body col-7">
+                            <p>{{ comment.content|capitalize }}</p>
+                        </div>
+                    </div>
+
+                </div>
+            {% endfor %}
+        </div>
+        <div class="row mt-5">
+
+            <div class="col-7 addComment d-flex" >
+                <input type="text" class="form-control" placeholder="Commentaire..."><a href="#" class="mt-2"><i class="fa fa-paper-plane fa-2x" aria-hidden="true"></i></a>
+            </div>
+            <div class="col-3 ml-auto">
+                <i class="fa fa-facebook-official fa-3x mx-2" aria-hidden="true" style="color: #999999"></i>
+                <i class="fa fa-instagram fa-3x mx-2" aria-hidden="true" style="color: #999999"></i>
+                <i class="fa fa-twitter fa-3x mx-2" aria-hidden="true" style="color: #999999"></i>
+            </div>
+
 
         </div>
+
+
     </div>
 {% endblock %}
