Travail sur les requete ajax

--- a/app/Resources/views/security/login.html.twig
+++ b/app/Resources/views/security/login.html.twig
@@ -42,7 +42,7 @@
                     {{ form_row(form._username) }}
                     {{ form_row(form._password) }}
 
-                    <button type="submit" class="btn btn-primary" formnovalidate>Inscription</button>
+                    <button type="submit" class="btn btn-primary" formnovalidate>Connexion</button>
 
                     {{ form_end(form) }}
                 </div>
