--- a/app/Resources/views/main/actualite.html.twig
+++ b/app/Resources/views/main/actualite.html.twig
@@ -11,7 +11,9 @@
         <p class="text-center">Accueil>>Actualités>>>{{ actualite.title|capitalize }}</p>
     </div>
     <div class="container">
+        {#----------------#}
         {#PARTIE ACTUALITE#}
+        {#----------------#}
         <div class="media">
             <img src="{{ asset('bundles/app/img/'~ user.profilePicture) }}" alt="" class="d-flex mr-3 profilePicture">
             <div class="media-body"><p class="text-center"></p>{{ user.username|capitalize }}</div>
@@ -26,46 +28,48 @@
             </div>
         </div>
 
+        {#-------------------#}
         {#PARTIE COMMENTAIRES#}
-        <div id="commentsContainer">
-            {% for comment in comments %}
-                <div class="media">
-                    <img src="{{ asset('bundles/app/img/'~comment.user.profilePicture) }}" alt="" class="d-flex mr-3 imgComment">
-                    <div class="row">
-                        <div class="media-body col-5">
-                            <p><strong>{{ comment.user.username|capitalize }}</strong><br>
-                                <span class="text-muted">{{ comment.updateAt|ago }}</span></p>
+        {#-------------------#}
+        <section id="commentSection">
+            <div id="commentsContainer">
+                {% for comment in comments %}
+                    <div class="media">
+                        <img src="{{ asset('bundles/app/img/'~comment.user.profilePicture) }}" alt="" class="d-flex mr-3 imgComment">
+                        <div class="row">
+                            <div class="media-body col-5">
+                                <p><strong>{{ comment.user.username|capitalize }}</strong><br>
+                                    <span class="text-muted">{{ comment.updateAt|ago }}</span></p>
 
+                            </div>
+                            <div class="media-body col-7">
+                                <p>{{ comment.content|capitalize }}</p>
+                            </div>
                         </div>
-                        <div class="media-body col-7">
-                            <p>{{ comment.content|capitalize }}</p>
-                        </div>
+
                     </div>
+                {% endfor %}
+            </div>
 
+            {#-------------------#}
+            {#FORMUALAIRE COMMENT#}
+            {#-------------------#}
+
+            <div class="row mt-5">
+
+                <div class="col-7 d-flex addComment" id="addComment" >
+                    {% include 'form/commentForm.html.twig' %}
                 </div>
-            {% endfor %}
-        </div>
+                <div class="col-3 ml-auto">
+                    <i class="fa fa-facebook-official fa-3x mx-2" aria-hidden="true" style="color: #999999"></i>
+                    <i class="fa fa-instagram fa-3x mx-2" aria-hidden="true" style="color: #999999"></i>
+                    <i class="fa fa-twitter fa-3x mx-2" aria-hidden="true" style="color: #999999"></i>
+                </div>
 
-        {#-------------------#}
-        {#FORMUALAIRE COMMENT#}
-        {#-------------------#}
 
-        <div class="row mt-5">
-
-            <div class="col-7 d-flex" id="addComment" >
-                {{ form_start(formComment, {'attr': {'id' : 'commentForm', 'class' : 'd-flex flex-row justify-content-between'}}) }}
-                {{ form_row (formComment.content, {"attr" : {"placeholder" : "Ajouter un commentaire..."}}) }}
-                <button role="submit" class="btn btn-primary btn-comment">Envoyé</button>
-                {{ form_end(formComment) }}
             </div>
-            <div class="col-3 ml-auto">
-                <i class="fa fa-facebook-official fa-3x mx-2" aria-hidden="true" style="color: #999999"></i>
-                <i class="fa fa-instagram fa-3x mx-2" aria-hidden="true" style="color: #999999"></i>
-                <i class="fa fa-twitter fa-3x mx-2" aria-hidden="true" style="color: #999999"></i>
-            </div>
+        </section>
 
-
-        </div>
 
 
     </div>
