--- a/app/Resources/views/main/home.html.twig
+++ b/app/Resources/views/main/home.html.twig
@@ -7,106 +7,97 @@
 
 {% block body %}
 
-    <div class="container-fluid" id="contain">
-        <div class="container">
-            <div class="card  text-center mx-auto bg-transparent" style="width: 75%">
-                <div class="card-title mt-5 text-white">
-                    <h1>NOS AMIS LES OISEAUX</h1>
-                </div>
-                <div class="card-body text-white">
-                    <h6>D'AUCUNS ONT DES AVENTURES...VOUS ÊTES UNE AVENTURE!</h6>
-
-                </div>
-                <div class="card-footer">
-                    <a href="{{ path('observation') }}" class="btn btn-primary">COMMENCER
-                    </a>
-                </div>
+    <div class="banner">
+        <div class="card  text-center mx-auto bg-transparent" style="width: 75%">
+            <div class="heading">
+                <h1 class="home-heading">NOS AMIS LES OISEAUX</h1>
+                <span class="home-baseline">D'aucuns ont des aventures... Vous êtes une aventure !</span>
+            </div>
+            <div class="container text-center mt-3">
+                <a href="{{ path('observation') }}" class="btn btn-primary mx-auto">COMMENCER</a>
             </div>
         </div>
     </div>
-    <div class="container-fluid">
-        <div class="container mt-5">
+
+    <img src="{{ asset('bundles/app/img/home/wave-cream.svg') }}" alt="vague" style="width: 100%">
+
+    <section id="explication">
+        <div class="container">
             <div class="card bg-transparent text-center mx-auto">
-                <div class="card-title">
-                    <h1>3 ÉTAPES</h1>
+                <div class="heading">
+                    <h2>3 étapes</h2>
+                    <span>Pour bien commencer votre aventure !</span>
                 </div>
-                <div class="card-body">
-                    <p>POUR BIEN COMMENCER VOTRE AVENTURE !</p>
-                </div>
-            </div>
-            <div class="media">
-                <img class="d-flex mr-3" src="{{ asset('bundles/app/img/computer.png') }}">
+            </div> 
+            <div class="media d-flex align-items-center">
+                <img class="d-flex mr-3" src="{{ asset('bundles/app/img/laptop.svg') }}">
                 <div class="media-body">
-                    <h5 class="mt-0">CRÉER UN COMPTE NAO</h5>
+                    <h3 class="mt-0">CRÉER UN COMPTE NAO</h3>
                     <p>Inscrivez-vous sur notre site, connectez-vous et profitez de l'ensemble des fonctionnalités proposées
                         par
                         l'association Nos Amis Les Animaux</p>
                 </div>
             </div>
-            <div class="container" id="path1">
 
+            <div class="row justify-content-center">
+                <img class="col-sm-8 d-none d-sm-block" src="{{ asset('bundles/app/img/home/path-1.svg') }}" alt="chemin" style="width: 100%">
             </div>
-            <div class="media">
+
+            <div class="media d-flex align-items-center">
                 <div class="media-body">
-                    <h5 class="mt-0">OBSERVEZ AUTOUR DE VOUS</h5>
+                    <h3 class="mt-0">OBSERVEZ AUTOUR DE VOUS</h3>
                     <p>Utilisez l'application pour visualiser les oiseaux qui ont été observés autour de vous et tenter à
                         votre
                         tour de les retrouver!<br>
                         Contemplez également les photos des autres utilisateurs ! </p>
                 </div>
-                <img class="d-flex mr-3" src="{{ asset('bundles/app/img/cam.png') }}">
+                <img class="d-flex mr-3" src="{{ asset('bundles/app/img/boussole-camera.svg') }}">
             </div>
-        <div class="container" id="path2">
-
-        </div>
-        <div class="media">
-            <img class="d-flex mr-3" src="{{ asset('bundles/app/img/book.png') }}">
-            <div class="media-body">
-
-                <h5 class="mt-0">PARTAGEZ VOTRE EXPÉRIENCE</h5>
-                <p>Vous venez de prendre en photo un oiseau magnifique ? Partagez votre chez-d'oeuvre en saisissant
-                    votre observation depuis votre smartphone ou depuis chez vous et en permettant ainsi à la communauté
-                    d'en profiter !</p>
+            
+            <div class="row justify-content-center">
+                <img class="col-sm-8 d-none d-sm-block" src="{{ asset('bundles/app/img/home/path-2.svg') }}" alt="chemin" style="width: 100%">
             </div>
-        </div>
-        <div class="container text-center mt-3"><a href="{{ path('observation') }}" class="btn btn-primary mx-auto">COMMENCER
-            </a>
-        </div>
-    </div>
 
+            <div class="media d-flex align-items-center">
+                <img class="d-flex mr-3" src="{{ asset('bundles/app/img/notebooks.svg') }}">
+                <div class="media-body">
+                    <h3 class="mt-0">PARTAGEZ VOTRE EXPÉRIENCE</h3>
+                    <p>Vous venez de prendre en photo un oiseau magnifique ? Partagez votre chez-d'oeuvre en saisissant
+                        votre observation depuis votre smartphone ou depuis chez vous et en permettant ainsi à la communauté
+                        d'en profiter !</p>
+                </div>
+            </div>
+            <div class="container text-center mt-3">
+                <a href="{{ path('observation') }}" class="btn btn-primary mx-auto">COMMENCER</a>
+            </div>
+        </div>{#Container#}
+    </section>
 
     {#POURQUOI?#}
-    <div class="container-fluid mt-5">
-        <div class="card bg-transparent text-center mx-auto">
-            <div class="card-title">
-                <h1>POURQUOI ?</h1>
+    <img src="{{ asset('bundles/app/img/home/wave-sand.svg') }}" alt="vague" style="width: 100%">
+    <section id="pourquoi">
+        <div class="container-fluid">
+            <div class="card bg-transparent text-center mx-auto">
+                <div class="heading">
+                    <h2>Pourquoi ?</h2>
+                    <span>Parce qu'en s'amusant, on peut aussi aider la recherche !</span>
+                </div>
             </div>
-            <div class="card-body">
-                <p>PARCE QU'EN S'AMUSANT, ON PEUT AUSSI AIDER LA RECHERCHE !</p>
-            </div>
-        </div>
-        <div class="row justify-content-around mt-5">
-            <div class="col-3">
-                <h3>L'OISEAU, UNE IDÉE DANS L'AIR</h3>
-                <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad assumenda aut culpa cumque expedita
-                    harum iusto libero neque quos sunt!</p>
-            </div>
-            <div class="col-3">
-                <img src="{{ asset('bundles/app/img/protected_bird.png') }}" alt="hiboux_trop_choux"
-                     id="hiboux_trop_choux">
-            </div>
-            <div class="col-3">
-                <h3>SOUTENEZ NOUS EN VOUS DIVERTISSANT</h3>
-                <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum harum illo incidunt iusto obcaecati
-                    qui quibusdam quisquam quo tenetur voluptatum.</p>
+            <div class="row align-items-center justify-content-around">
+                <div class="col-12 col-lg-3 ml-auto">
+                    <h3>L'OISEAU, UNE IDÉE DANS L'AIR</h3>
+                    <p class="text-justify">Depuis une dizaine d’années la recherche a pu constater le fort impact de l’homme sur la vie animale, en particulier sur les oiseaux, pour qui la réduction de l’environnement naturel est fatale.</p>
+                </div>
+                <div class="col-12 col-lg-4">
+                    <img src="{{ asset('bundles/app/img/protected_bird.png') }}" alt="hiboux_trop_choux" id="hiboux_trop_choux">
+                </div>
+                <div class="col-12 col-lg-3 mr-auto">
+                    <h3>SOUTENEZ NOUS EN VOUS DIVERTISSANT</h3>
+                    <p class="text-justify">Participez à un programme de recherche visant à étudier les effets du climat, de l’urbanisation et de l’agriculture sur la biodiversité gràace à vos observations lors de vos balades partout en France !</p>
+                </div>
             </div>
         </div>
-    </div>
-
-
-    </div>{#Container mt-5#}
-    </div>{#Container-fluid#}
-
+    </section>
 
 {% endblock %}
 
