--- a/src/AppBundle/Resources/public/css/base.css
+++ b/src/AppBundle/Resources/public/css/base.css
@@ -17,8 +17,7 @@
     unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
 }
 
-body
-{
+body {
     font-family: "Roboto", Arial, sans-serif;
     font-size: 16px;
     background-color: #fffdf8;
@@ -30,25 +29,40 @@ body
 ------Custumization de BOOTSTRAp------
 ------------------
 ------------------*/
+
+.card {
+    border: none;
+}
+
+.nav-item {
+    font-size: 12px;
+    text-transform: uppercase;
+    line-height: 17px;
+    letter-spacing: 1px;
+}
+
 .btn {
     padding: 14px 24px;
     border: 0 none;
     border-radius: 50px;
-    font-color: white;
-    letter-spacing: 1px;
+    color: #FFFFFF;
     text-transform: uppercase;
 }
 
-.btn-primary
-{
+.btn-primary {
     background: #6d49d1;
+}
+
+.btn-outline {
+    border: 2px solid #6D49D1;
+    color: #6d49d1;
 }
 
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open > .dropdown-toggle.btn-primary {
     background: #53399e;
 }
-.form-control
-{
+
+.form-control {
     border: #ded6cd;
     border-radius: 50px;
 }
@@ -58,8 +72,23 @@ body
 ------HEADER------
 ------------------
 ------------------*/
-.navbar-brand{
+.navbar {
+    height: 50px;
+    padding: 0 30px !important;
+    background: #FFFEF9;
+}
+
+.navbar-logo {
+    margin-top: -90px;
+    height: 90px;
+}
+
+.navbar-brand {
     font-family: "Raleway";
+}
+
+.login-tools {
+
 }
 
 /*----------------
@@ -67,23 +96,139 @@ body
 ------FOOTER------
 ------------------
 ------------------*/
-.footer
-{
+.footer {
     margin-top: 70px;
 }
-#footerNewsletter
-{
+#footerNewsletter {
     background: #c1b7ab;
 }
 
-#footer
-{
-    padding-top: 50px;
+#footer {
     background: #53399e;
-    height: 250px;
+    height: 400px;
+    color: rgba(255, 254, 249, 0.7);
 }
 
-#souscrire
-{
+#footer-title {
+    color: rgba(255, 254, 249, 0.7);
+}
+
+#footer li>a {
+    font-size: 14px;
+    text-transform: none;
+    color: rgba(255, 254, 249, 0.7);
+}
+
+#souscrire {
     text-transform: uppercase;
 }
+
+/* Typo */
+h1 {
+  font-family: Raleway-Extralight;
+  font-size: 60px;
+  color: #262626;
+  letter-spacing: auto;
+  line-height: 70px;
+  text-transform: uppercase;
+}
+
+h2 {
+  font-family: Raleway-Light;
+  font-size: 36px;
+  color: #262626;
+  letter-spacing: 2px;
+  line-height: 39px;
+  text-transform: uppercase;
+}
+
+h3 {
+  font-family: Raleway-Regular;
+  font-size: 18px;
+  color: #262626;
+  letter-spacing: 3px;
+  line-height: 19px;
+  text-transform: uppercase;
+}
+
+h4 {
+  font-family: Raleway-Medium;
+  font-size: 16px;
+  color: #262626;
+  letter-spacing: 2.5px;
+  line-height: 19px;
+  text-transform: uppercase;
+}
+
+p {
+    font-size: 14px ;
+    line-height: 22px;
+}
+
+span { 
+  font-family: Raleway-Regular;
+  font-size: 12px;
+  color: #262626;
+  letter-spacing: 1px;
+  line-height: 17px;
+  text-transform: uppercase;
+}
+
+
+/* HEADING SECTION */
+.heading {
+  text-align: center;
+  position: relative;
+  text-align: center;
+  color: #262626;
+  padding-bottom: 10px;
+  margin-bottom: 60px;
+  text-transform: uppercase;
+}
+
+.heading::after {
+    content: '';
+    width: 16px;
+    height: 1px;
+    background-color: #262626;
+    position: absolute;
+    left: -webkit-calc(50% - 8px);
+    left: calc(50% - 8px);
+    bottom: 0;
+}
+
+*:before, *:after {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+/* BOUTON INPUT */
+input {
+    height: 48px;
+    border-radius: 50px !important;
+    background: #FFFEF9;
+}
+
+input[placeholder], [placeholder], *[placeholder] {
+    margin-left: 30px;
+}
+
+.input-group-icon {
+    color: rgba(255, 254, 249, 0.7);
+}
+
+.input-group {
+    border-radius: 50px !important;
+    background: #FFFEF9;
+    border: 2px solid #DED5CD;
+}
+
+.input-group-addon {
+    width: 36px;
+    height: 36px;
+    background: #6d49d1;
+    border-radius: 50px !important;
+    margin-right: 6px;
+}
+
