--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -39,10 +39,10 @@
                     <a class="nav-link" href="{{ path('actualites') }}">ACTUALITÉS</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">A PROPOS</a>
+                    <a class="nav-link" href="{{ path('aPropos') }}">A PROPOS</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">CONTACT</a>
+                    <a class="nav-link" href="{{ path('contact') }}">CONTACT</a>
                 </li>
             </ul>
             {% if is_granted('ROLE_USER') %}
