Ajustement homepage, base et actualités

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -97,13 +97,13 @@
     <img src="{{ asset('bundles/app/img/footer/wave-brown.svg') }}" alt="vague" style="width: 100%">
     <div class="container-fluid" id="footerNewsletter">
         <div class="container p-5">
-            <div class="row justify-content-center d-flex align-items-center" >
+            <div class="row justify-content-center align-items-center" >
                 <div class="col-3 text-center" id="souscrire">
                     <h2>SOUSCRIRE</h2>
                     <p>à notre newsletter</p>
                 </div>
                 <div class="col-7">
-                    <div class="input-group d-flex align-items-center">
+                    <div class="input-group align-items-center">
                         <input type="text" class="form-control" placeholder="Email address">
                         <a class="input-group-addon text-center" href="#"><span class="fa fa-envelope input-group-icon"></span></a>
                     </div>
