--- a/app/Resources/views/main/home.html.twig
+++ b/app/Resources/views/main/home.html.twig
@@ -9,8 +9,8 @@
 
     <div class="banner">
         <div class="card  text-center mx-auto bg-transparent" style="width: 75%">
-            <div class="heading">
-                <h1 class="home-heading">NOS AMIS LES OISEAUX</h1>
+            <div class="home-heading">
+                <h1 class="home-title">NOS AMIS LES OISEAUX</h1>
                 <span class="home-baseline">D'aucuns ont des aventures... Vous êtes une aventure !</span>
             </div>
             <div class="container text-center mt-3">
@@ -23,12 +23,10 @@
 
     <section id="explication">
         <div class="container">
-            <div class="card bg-transparent text-center mx-auto">
-                <div class="heading">
-                    <h2>3 étapes</h2>
-                    <span>Pour bien commencer votre aventure !</span>
-                </div>
-            </div> 
+            <div class="heading">
+                <h2>3 étapes</h2>
+                <span>Pour bien commencer votre aventure !</span>
+            </div>
             <div class="media d-flex align-items-center">
                 <img class="d-flex mr-3" src="{{ asset('bundles/app/img/laptop.svg') }}">
                 <div class="media-body">
