--- a/src/AppBundle/Resources/public/css/actualites.css
+++ b/src/AppBundle/Resources/public/css/actualites.css
@@ -11,6 +11,7 @@
 .card-img-top{
     border-top-left-radius: 25px;
     border-top-right-radius: 25px;
+    max-height: 100px;
 }
 
 #logo
@@ -21,3 +22,4 @@
     margin-right: auto;
 }
 
+.object-fit_cover { object-fit: cover }
