--- a/app/Resources/views/main/actualites.html.twig
+++ b/app/Resources/views/main/actualites.html.twig
@@ -5,30 +5,38 @@
 {% endblock %}
 
 {% block body %}
-<div class="container-fluid" id="headContainer">
-    <h1 class="text-center">ACTUALITÉS</h1>
-    <p class="text-center">Accueil >> Actualités</p>
-</div>
 
-<div class="container">
-   <div class="row">
-       {% for actualite in actualites %}
-           <div class="col">
-               <div class="card p-0 m-2" style="width: 20rem;">
-                   <img class="card-img-top" src="{{ asset('bundles/app/img/'~ actualite.actualiteImage) }}" alt="image_actualite" >
+  <div class="container-fluid heading-page">
+      <h1 class="text-center">ACTUALITÉS</h1>
+      <p class="text-center">Accueil >> Actualités</p>
+  </div>
+  <img src="{{ asset('bundles/app/img/template/wave-driedwood.svg') }}" alt="vague" style="width: 100%">
 
-                   <div class="card-title p4">
-                       <p class="text-center">{{ actualite.updateAt|localizeddate('full', 'none')|upper }}</p>
-                       <h3 class="text-center"><a href="{{ path('actualite', {'id': actualite.id}) }}">{{ actualite.title|upper }}</a></h3></div>
-                   <div class="card-body p4 text-justify"><p class="">{{ actualite.content|truncate(100,false,'...') }}</p></div>
-           </div>
-
-
+  <section class="mt-5">
+    <div class="container">
+      <div class="heading">
+          <h2>3 étapes</h2>
+          <span>Pour bien commencer votre aventure !</span>
+      </div>
+       <div class="row justify-content-around">
+          {% for actualite in actualites %}
+            <div class="">
+              <div class="card p-0 mb-5" style="width: 20rem;">
+                <div class="mb-4">
+                  <img class="card-img-top" src="{{ asset('bundles/app/img/'~ actualite.actualiteImage) }}" alt="image_actualite" >
+                </div>
+                <div class="card-title text-center px-3 mb-0">
+                  <h6>{{ actualite.updateAt|localizeddate('full', 'none')|upper }}</p>
+                  <h3><a href="{{ path('actualite', {'id': actualite.id}) }}">{{ actualite.title|upper }}</a></h3></div>
+                <div class="card-body text-justify"><p>{{ actualite.content|truncate(100,false,'...') }}</p></div>
+              </div>
+            </div>
+          {% endfor %}     
        </div>
-       {% endfor %}
-               
-   </div>
-
-</div>
+    </div>
+    <div class="container text-center mt-3">
+        <a href="{{ path('observation') }}" class="btn btn-outline mx-auto">VOIR PLUS</a>
+    </div>
+  </section>
 
 {% endblock %}
