--- a/app/Resources/views/form/commentForm.html.twig
+++ b/app/Resources/views/form/commentForm.html.twig
@@ -1,4 +1,5 @@
-<form name="appbundle_comment" method="post" id="commentForm" class="d-flex flex-row justify-content-between" data-url="{{ path('addComment', {'id' : actualite.id} ) }}">
+<div class="form_error"></div>
+<form name="appbundle_comment" method="POST" id="commentForm" class="d-flex flex-row justify-content-between" data-url="{{ path('addComment', {'id' : actualite.id} ) }}">
     <div class="form-group">
         <input type="text" id="content" name="content" required="required" placeholder="Ajouter un commentaire..." class="form-control" />
     </div>
