--- a/app/Resources/views/main/actualites.html.twig
+++ b/app/Resources/views/main/actualites.html.twig
@@ -15,12 +15,11 @@
   <section class="mt-5">
     <div class="container">
       <div class="heading">
-          <h2>3 étapes</h2>
-          <span>Pour bien commencer votre aventure !</span>
+          <h2>Quoi de neuf ?</h2>
+          <span>Des actualités en lien avec la recherche et l'observation de vos animaux préférés</span>
       </div>
        <div class="row justify-content-around">
           {% for actualite in actualites %}
-            <div class="">
               <div class="card p-0 mb-5" style="width: 20rem;">
                 <div class="mb-4">
                   <img class="card-img-top" src="{{ asset('bundles/app/img/'~ actualite.actualiteImage) }}" alt="image_actualite" >
@@ -30,7 +29,6 @@
                   <h3><a href="{{ path('actualite', {'id': actualite.id}) }}">{{ actualite.title|upper }}</a></h3></div>
                 <div class="card-body text-justify"><p>{{ actualite.content|truncate(100,false,'...') }}</p></div>
               </div>
-            </div>
           {% endfor %}     
        </div>
     </div>
