--- a/app/Resources/views/main/contact.html.twig
+++ b/app/Resources/views/main/contact.html.twig
@@ -7,12 +7,27 @@
 {% endblock %}
 
 {% block body %}
-    <div class="well" id="contain">
-        <h1>Contact</h1>
+    <div class="container-fluid heading-page">
+      <h1 class="text-center">CONTACT</h1>
+      <p class="text-center">Accueil >> Contact</p>
+  </div>
+  <img src="{{ asset('bundles/app/img/template/wave-driedwood.svg') }}" alt="vague" style="width: 100%">
 
-    </div>
-
-
+	<section class="mt-5">
+		<div class="container">
+			<div class="heading">
+				<h3>3 étapes</h2>
+				<p>Vous rencontrez un souci ou vous avez tout simplement quelques questions ? Jetez d’abord un oeil aux FAQ !
+Si vous ne trouvez pas l’information que vous souhaitiez, n’hésitez pas à nous contacter à l’aide de ce formulaire !</p>
+			</div>
+			<div class="row justify-content-around">
+				
+			</div>
+		</div>
+		<div class="container text-center mt-3">
+			<a href="{{ path('observation') }}" class="btn btn-outline mx-auto">VOIR PLUS</a>
+		</div>
+	</section>
 {% endblock %}
 
 {% block javascripts %}
